documentacion del componente button

--- a/projects/ngx-relic/src/lib/table/Docs.mdx
+++ b/projects/ngx-relic/src/lib/table/Docs.mdx
@@ -8,9 +8,8 @@ import {
   Description,
   Source,
 } from "@storybook/blocks";
-import { Markdown } from "@storybook/blocks";
 
-<Meta of={TableStories} />
+<Meta of={TableStories} title="Docs" />
 
 <Title />
 <Description />
